--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 28 Dec 2020 12:21:24 GMT
+// Generated on Tue, 29 Dec 2020 09:13:56 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -475,4 +475,15 @@ $tooltip-size-distance: 5px + 4px;
 $tree-color-background: #4D4D4D;
 $tree-size-border-width: 2px;
 $tree-size-node-height: 28px;
-$tree-size-node-padding: 28px;
+$vertical-navbar-color-background: #114E77;
+$vertical-navbar-color-color: white;
+$vertical-navbar-color-toggle-button: white;
+$vertical-navbar-color-state-hovered-background: lighten(#114E77, 5%);
+$vertical-navbar-color-state-active-background: lighten(#114E77, 5%);
+$vertical-navbar-color-state-progress-background: lighten(#07314D, 15%);
+$vertical-navbar-item-size-height: 64px;
+$vertical-navbar-item-size-margin: 1px 0;
+$vertical-navbar-item-size-padding-horizontal: 16px;
+$vertical-navbar-item-size-icon-margin-right: 16px;
+$vertical-navbar-item-font-icon-size: 32px;
+$navbar-badge-size-width: 64px;
