--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 29 Dec 2020 09:13:56 GMT
+// Generated on Tue, 29 Dec 2020 09:37:35 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -379,6 +379,10 @@ $navbar-item-color-states-disabled-opacity: 0.3;
 $navbar-item-size-padding: 16px;
 $navbar-brand-size-padding: 12px;
 $navbar-brand-size-margin-right: 24px;
+$optgroup-size-padding-left: 17px;
+$option-size-padding: 0 16px;
+$option-size-height: 32px;
+$option-size-border-width: 2px;
 $popover-color-border-color: #B3B3B3;
 $popover-size-padding: 16px;
 $popover-size-border-width: 1px;
