--- a/packages/mosaic/core/styles/_alerts.scss
+++ b/packages/mosaic/core/styles/_alerts.scss
@@ -10,8 +10,8 @@
     vertical-align: top;
     text-align: left;
 
-    border: 1px solid transparent;
-    border-radius: 4px;
+    border: $alert-size-border-width solid transparent;
+    border-radius: $alert-size-border-radius;
 
     .mc-link {
         padding-left: 0;
@@ -21,22 +21,16 @@
         margin-right: 8px;
     }
 
-    &.mc-alert_small {
-        // todo откуда такие паддинги ?
-        padding: 11px 15px;
-
-        &.mc-alert_dismissible {
-            padding-right: 32px;
-        }
+    &:not(.mc-alert_small) {
+        padding: $alert-size-padding;
     }
 
-    &:not(.mc-alert_small) {
-        // todo откуда такие паддинги ?
-        padding: 13px 15px;
+    &.mc-alert_small {
+        padding: $alert-size-padding-small;
+    }
 
-        &.mc-alert_dismissible {
-            padding-right: 32px;
-        }
+    &.mc-alert_dismissible {
+        padding-right: $alert-size-right-padding-dismissible;
     }
 }
 
@@ -51,8 +45,6 @@
 
         border: 1px solid transparent;
         outline: 0;
-
-        margin: 0;
 
         background: transparent;
 
@@ -75,27 +67,16 @@
     }
 }
 
-@mixin alert-theme($color, $is-dark) {
-    background-color: mc-color($color, if($is-dark, darker, lighter));
-    border-color: mc-color($color, if($is-dark, darker, default));
+@mixin alert-theme($background, $border, $icon) {
+    background-color: $background;
+    border-color: $border;
 
     .mc-alert__icon {
-        color: mc-color($color, if($is-dark, default, darker));
+        color: $icon;
     }
 }
 
 @mixin mc-alert-theme($theme) {
-    $primary: map-get($theme, primary);
-    $second: map-get($theme, second);
-    $error: map-get($theme, error);
-
-    $warning: map-get($theme, warning);
-    $success: map-get($theme, success);
-    $info: map-get($theme, info);
-
-    $foreground: map-get($theme, foreground);
-    $background: map-get($theme, background);
-
     $is-dark: map-get($theme, is-dark);
 
     .mc-alert__close:focus {
@@ -103,43 +84,55 @@
     }
 
     .mc-alert {
-        color: mc-color($foreground, text);
+        color: $color-foreground-text;
     }
 
     .mc-alert_error {
-        background-color: mc-color($error, if($is-dark, darker, lighter));
-        // todo $error более темный в светлой теме
-        border-color: mc-color($error, if($is-dark, darker, 200));
-
-        .mc-alert__icon {
-            color: mc-color($error, if($is-dark, default, 400));
+        @if($is-dark) {
+            @include alert-theme($color-error-darker, $color-error-darker, $color-error-default);
+        } @else {
+            @include alert-theme(
+                $color-error-lighter, map-get($color-error-palette, 200), map-get($color-error-palette, 400)
+            );
         }
     }
 
     .mc-alert_warning {
-        @include alert-theme($warning, $is-dark);
+        @if($is-dark) {
+            @include alert-theme($color-warning-darker, $color-warning-darker, $color-warning-default);
+        } @else {
+            @include alert-theme($color-warning-lighter, $color-warning-default, $color-warning-darker);
+        }
     }
 
     .mc-alert_success {
-        @include alert-theme($success, $is-dark);
+        @if($is-dark) {
+            @include alert-theme($color-success-darker, $color-success-darker, $color-success-default);
+        } @else {
+            @include alert-theme($color-success-lighter, $color-success-default, $color-success-darker);
+        }
     }
 
     .mc-alert_info {
-        @include alert-theme($info, $is-dark);
+        @if($is-dark) {
+            @include alert-theme($color-info-darker, $color-info-darker, $color-info-default);
+        } @else {
+            @include alert-theme($color-info-lighter, $color-info-default, $color-info-darker);
+        }
     }
 
     .mc-alert:not(.mc-alert_error):not(.mc-alert_warning):not(.mc-alert_success):not(.mc-alert_info) {
-        background-color: mc-color($second, if($is-dark, darker, lighter));
-        border-color: mc-color($second, if($is-dark, darker, 200));
-
-        .mc-alert__icon {
-            color: mc-color($second, if($is-dark, default, 400));
+        @if($is-dark) {
+            @include alert-theme($color-second-darker, $color-second-darker, $color-second-default);
+        } @else {
+            @include alert-theme(
+                $color-second-lighter, map-get($color-second-palette, 200), map-get($color-second-palette, 400)
+            );
         }
     }
 }
 
 @mixin mc-alert-typography($config) {
-
     .mc-alert:not(.mc-alert_small) {
         @include mc-typography-level-to-styles($config, body);
 
