optimused variables using

--- a/packages/mosaic/select/select.scss
+++ b/packages/mosaic/select/select.scss
@@ -53,11 +53,11 @@
     position: relative;
 
     max-width: 100%;
-    height: 32px;
+    height: $option-size-height;
 
     cursor: default;
     outline: none;
-    padding: 0 16px;
+    padding: $option-size-padding;
 }
 
 .mc-select__matcher {
@@ -82,7 +82,7 @@
 
     overflow: hidden;
 
-    max-height: 28px;
+    max-height: $select-size-height - $select-panel-size-border-width;
 
     & .mc-tag {
         margin-right: 4px;
@@ -138,8 +138,8 @@
     .mc-optgroup-label,
     .mc-option {
         font-size: inherit;
-        line-height: $mc-option-item-height;
-        height: $mc-option-item-height;
+        line-height: $option-size-height;
+        height: $option-size-height;
     }
 }
 
