--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Tue, 29 Dec 2020 12:11:11 GMT
+// Generated on Wed, 30 Dec 2020 07:58:33 GMT
 
 $color-primary-lighter: #57A4D7;
 $color-primary-default: #338FCC;
@@ -281,6 +281,10 @@ $alert-size-border-radius: 4px;
 $autocomplete-size-panel-padding: 4px 0;
 $autocomplete-size-panel-max-height: 256px;
 $autocomplete-size-panel-border-radius: 3px;
+$badge-size-min-width: 10px;
+$badge-size-padding: 4px 8px;
+$badge-size-border-width: 1px;
+$badge-size-border-radius: 4px;
 $button-toggle-size-border-size: 1px;
 $button-toggle-size-border-radius: 3px;
 $button-color-active-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
