added dark color

--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,62 +1,115 @@
 
 // Do not edit directly
-// Generated on Wed, 30 Dec 2020 10:26:05 GMT
+// Generated on Mon, 11 Jan 2021 07:54:13 GMT
 
-$color-primary-lighter: #57A4D7;
-$color-primary-default: #338FCC;
-$color-primary-darker: #206EA2;
-$color-primary-lighter-contrast: white;
-$color-primary-default-contrast: white;
-$color-primary-darker-contrast: white;
-$color-second-lighter: #E6E6E6;
-$color-second-default: #B3B3B3;
-$color-second-darker: #999999;
-$color-second-lighter-contrast: #4D4D4D;
-$color-second-default-contrast: #4D4D4D;
-$color-second-darker-contrast: white;
-$color-error-lighter: #FCEFEC;
-$color-error-default: #E76E5C;
-$color-error-darker: #E04D36;
-$color-error-lighter-contrast: #4D4D4D;
-$color-error-default-contrast: white;
-$color-error-darker-contrast: white;
-$color-info-lighter: #EBF4FB;
-$color-info-default: #AAD1EC;
-$color-info-darker: #57A4D7;
-$color-info-lighter-contrast: #4D4D4D;
-$color-info-default-contrast: #4D4D4D;
-$color-info-darker-contrast: white;
-$color-success-lighter: #EDF8E9;
-$color-success-default: #B4DEA4;
-$color-success-darker: #6FBA53;
-$color-success-lighter-contrast: #4D4D4D;
-$color-success-default-contrast: #4D4D4D;
-$color-success-darker-contrast: white;
-$color-warning-lighter: #FCF5E8;
-$color-warning-default: #F0D49B;
-$color-warning-darker: #DFA739;
-$color-warning-lighter-contrast: #4D4D4D;
-$color-warning-default-contrast: white;
-$color-warning-darker-contrast: white;
-$color-foreground-text: #4D4D4D;
-$color-foreground-text-less-contrast: #999999;
-$color-foreground-text-disabled: #B3B3B3;
-$color-foreground-divider: #E6E6E6;
-$color-foreground-border: #B3B3B3;
-$color-foreground-icon: #999999;
-$color-background-background: white;
-$color-background-background-popup: white;
-$color-background-background-popup-footer: #F0F0F0;
-$color-background-background-disabled: #F0F0F0;
-$color-background-overlay-hovered: rgba(black, 0.05);
-$color-background-overlay-active: rgba(black, 0.1);
-$color-background-overlay-disabled: rgba(white, 0.3);
+$light-color-primary-lighter: #57A4D7;
+$light-color-primary-default: #338FCC;
+$light-color-primary-darker: #206EA2;
+$light-color-primary-lighter-contrast: white;
+$light-color-primary-default-contrast: white;
+$light-color-primary-darker-contrast: white;
+$light-color-second-lighter: #E6E6E6;
+$light-color-second-default: #B3B3B3;
+$light-color-second-darker: #999999;
+$light-color-second-lighter-contrast: #4D4D4D;
+$light-color-second-default-contrast: #4D4D4D;
+$light-color-second-darker-contrast: white;
+$light-color-error-lighter: #FCEFEC;
+$light-color-error-default: #E76E5C;
+$light-color-error-darker: #E04D36;
+$light-color-error-lighter-contrast: #4D4D4D;
+$light-color-error-default-contrast: white;
+$light-color-error-darker-contrast: white;
+$light-color-info-lighter: #EBF4FB;
+$light-color-info-default: #AAD1EC;
+$light-color-info-darker: #57A4D7;
+$light-color-info-lighter-contrast: #4D4D4D;
+$light-color-info-default-contrast: #4D4D4D;
+$light-color-info-darker-contrast: white;
+$light-color-success-lighter: #EDF8E9;
+$light-color-success-default: #B4DEA4;
+$light-color-success-darker: #6FBA53;
+$light-color-success-lighter-contrast: #4D4D4D;
+$light-color-success-default-contrast: #4D4D4D;
+$light-color-success-darker-contrast: white;
+$light-color-warning-lighter: #FCF5E8;
+$light-color-warning-default: #F0D49B;
+$light-color-warning-darker: #DFA739;
+$light-color-warning-lighter-contrast: #4D4D4D;
+$light-color-warning-default-contrast: white;
+$light-color-warning-darker-contrast: white;
+$light-color-foreground-text: #4D4D4D;
+$light-color-foreground-text-less-contrast: #999999;
+$light-color-foreground-text-disabled: #B3B3B3;
+$light-color-foreground-divider: #E6E6E6;
+$light-color-foreground-border: #B3B3B3;
+$light-color-foreground-icon: #999999;
+$light-color-background-background: white;
+$light-color-background-background-popup: white;
+$light-color-background-background-popup-footer: #F0F0F0;
+$light-color-background-background-disabled: #F0F0F0;
+$light-color-background-overlay-hovered: rgba(black, 0.05);
+$light-color-background-overlay-active: rgba(black, 0.1);
+$light-color-background-overlay-disabled: rgba(white, 0.3);
+$light-color-states-focused-color: #338FCC;
+$light-color-states-selected-color: #D8EAF7;
+$light-color-states-pressed-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
+$light-color-states-disabled-opacity: 0.3;
+$dark-color-primary-lighter: #57A4D7;
+$dark-color-primary-default: #338FCC;
+$dark-color-primary-darker: #206EA2;
+$dark-color-primary-lighter-contrast: white;
+$dark-color-primary-default-contrast: white;
+$dark-color-primary-darker-contrast: white;
+$dark-color-second-lighter: #E6E6E6;
+$dark-color-second-default: #B3B3B3;
+$dark-color-second-darker: #999999;
+$dark-color-second-lighter-contrast: #4D4D4D;
+$dark-color-second-default-contrast: #4D4D4D;
+$dark-color-second-darker-contrast: white;
+$dark-color-error-lighter: #FCEFEC;
+$dark-color-error-default: #E76E5C;
+$dark-color-error-darker: #E04D36;
+$dark-color-error-lighter-contrast: #4D4D4D;
+$dark-color-error-default-contrast: white;
+$dark-color-error-darker-contrast: white;
+$dark-color-info-lighter: #EBF4FB;
+$dark-color-info-default: #AAD1EC;
+$dark-color-info-darker: #57A4D7;
+$dark-color-info-lighter-contrast: #4D4D4D;
+$dark-color-info-default-contrast: #4D4D4D;
+$dark-color-info-darker-contrast: white;
+$dark-color-success-lighter: #EDF8E9;
+$dark-color-success-default: #B4DEA4;
+$dark-color-success-darker: #6FBA53;
+$dark-color-success-lighter-contrast: #4D4D4D;
+$dark-color-success-default-contrast: #4D4D4D;
+$dark-color-success-darker-contrast: white;
+$dark-color-warning-lighter: #FCF5E8;
+$dark-color-warning-default: #F0D49B;
+$dark-color-warning-darker: #DFA739;
+$dark-color-warning-lighter-contrast: #4D4D4D;
+$dark-color-warning-default-contrast: white;
+$dark-color-warning-darker-contrast: white;
+$dark-color-foreground-text: #4D4D4D;
+$dark-color-foreground-text-less-contrast: #999999;
+$dark-color-foreground-text-disabled: #B3B3B3;
+$dark-color-foreground-divider: #E6E6E6;
+$dark-color-foreground-border: #B3B3B3;
+$dark-color-foreground-icon: #999999;
+$dark-color-background-background: white;
+$dark-color-background-background-popup: white;
+$dark-color-background-background-popup-footer: #F0F0F0;
+$dark-color-background-background-disabled: #F0F0F0;
+$dark-color-background-overlay-hovered: rgba(black, 0.05);
+$dark-color-background-overlay-active: rgba(black, 0.1);
+$dark-color-background-overlay-disabled: rgba(white, 0.3);
+$dark-color-states-focused-color: #338FCC;
+$dark-color-states-selected-color: #114E77;
+$dark-color-states-pressed-shadow: inset 1px 2px 2px 0 rgba(black, 0.2);
+$dark-color-states-disabled-opacity: 0.3;
 $font-family-base: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
 $font-family-monospace: 'Roboto Mono', 'Consolas', 'Menlo', 'Monaco', monospace;
-$globals-states-focused-color: #338FCC;
-$globals-states-selected-color: #D8EAF7;
-$globals-states-pressed-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
-$globals-states-disabled-opacity: 0.3;
 $palette-blue-40: #F5FAFD;
 $palette-blue-60: #EBF4FB;
 $palette-blue-100: #D8EAF7;
