added dark foreground and background

--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 11 Jan 2021 07:54:13 GMT
+// Generated on Mon, 11 Jan 2021 08:28:46 GMT
 
 $light-color-primary-lighter: #57A4D7;
 $light-color-primary-default: #338FCC;
@@ -55,55 +55,55 @@ $light-color-states-focused-color: #338FCC;
 $light-color-states-selected-color: #D8EAF7;
 $light-color-states-pressed-shadow: inset 0 1px 2px 0 rgba(black, 0.2);
 $light-color-states-disabled-opacity: 0.3;
-$dark-color-primary-lighter: #57A4D7;
-$dark-color-primary-default: #338FCC;
-$dark-color-primary-darker: #206EA2;
-$dark-color-primary-lighter-contrast: white;
+$dark-color-primary-lighter: #7FBAE1;
+$dark-color-primary-default: #57A4D7;
+$dark-color-primary-darker: #338FCC;
+$dark-color-primary-lighter-contrast: #4D4D4D;
 $dark-color-primary-default-contrast: white;
 $dark-color-primary-darker-contrast: white;
-$dark-color-second-lighter: #E6E6E6;
-$dark-color-second-default: #B3B3B3;
-$dark-color-second-darker: #999999;
+$dark-color-second-lighter: #CCCCCC;
+$dark-color-second-default: #999999;
+$dark-color-second-darker: #4D4D4D;
 $dark-color-second-lighter-contrast: #4D4D4D;
-$dark-color-second-default-contrast: #4D4D4D;
+$dark-color-second-default-contrast: white;
 $dark-color-second-darker-contrast: white;
-$dark-color-error-lighter: #FCEFEC;
+$dark-color-error-lighter: #F4B7AE;
 $dark-color-error-default: #E76E5C;
-$dark-color-error-darker: #E04D36;
+$dark-color-error-darker: #832112;
 $dark-color-error-lighter-contrast: #4D4D4D;
 $dark-color-error-default-contrast: white;
 $dark-color-error-darker-contrast: white;
-$dark-color-info-lighter: #EBF4FB;
-$dark-color-info-default: #AAD1EC;
-$dark-color-info-darker: #57A4D7;
+$dark-color-info-lighter: #AAD1EC;
+$dark-color-info-default: #57A4D7;
+$dark-color-info-darker: #114E77;
 $dark-color-info-lighter-contrast: #4D4D4D;
-$dark-color-info-default-contrast: #4D4D4D;
+$dark-color-info-default-contrast: white;
 $dark-color-info-darker-contrast: white;
-$dark-color-success-lighter: #EDF8E9;
-$dark-color-success-default: #B4DEA4;
-$dark-color-success-darker: #6FBA53;
+$dark-color-success-lighter: #B4DEA4;
+$dark-color-success-default: #6FBA53;
+$dark-color-success-darker: #276211;
 $dark-color-success-lighter-contrast: #4D4D4D;
-$dark-color-success-default-contrast: #4D4D4D;
+$dark-color-success-default-contrast: white;
 $dark-color-success-darker-contrast: white;
-$dark-color-warning-lighter: #FCF5E8;
-$dark-color-warning-default: #F0D49B;
-$dark-color-warning-darker: #DFA739;
+$dark-color-warning-lighter: #F0D49B;
+$dark-color-warning-default: #DFA739;
+$dark-color-warning-darker: #7D5504;
 $dark-color-warning-lighter-contrast: #4D4D4D;
 $dark-color-warning-default-contrast: white;
 $dark-color-warning-darker-contrast: white;
-$dark-color-foreground-text: #4D4D4D;
+$dark-color-foreground-text: #F0F0F0;
 $dark-color-foreground-text-less-contrast: #999999;
-$dark-color-foreground-text-disabled: #B3B3B3;
-$dark-color-foreground-divider: #E6E6E6;
-$dark-color-foreground-border: #B3B3B3;
+$dark-color-foreground-text-disabled: #999999;
+$dark-color-foreground-divider: #666666;
+$dark-color-foreground-border: #808080;
 $dark-color-foreground-icon: #999999;
-$dark-color-background-background: white;
-$dark-color-background-background-popup: white;
-$dark-color-background-background-popup-footer: #F0F0F0;
-$dark-color-background-background-disabled: #F0F0F0;
+$dark-color-background-background: #333333;
+$dark-color-background-background-popup: #4D4D4D;
+$dark-color-background-background-popup-footer: transparent;
+$dark-color-background-background-disabled: #666666;
 $dark-color-background-overlay-hovered: rgba(black, 0.05);
 $dark-color-background-overlay-active: rgba(black, 0.1);
-$dark-color-background-overlay-disabled: rgba(white, 0.3);
+$dark-color-background-overlay-disabled: rgba(white, 0.2);
 $dark-color-states-focused-color: #338FCC;
 $dark-color-states-selected-color: #114E77;
 $dark-color-states-pressed-shadow: inset 1px 2px 2px 0 rgba(black, 0.2);
