--- a/packages/mosaic/core/theming/_theming.scss
+++ b/packages/mosaic/core/theming/_theming.scss
@@ -42,10 +42,29 @@
 
 @function mc-light-theme($primary, $second, $error, $info, $success, $warning) {
     $states: (
-        focused-color: mc-color($primary),
-        selected-color: mc-color($primary, 100),
-        pressed-shadow: inset 0 1px 2px 0 rgba(black, 0.2),
-        disabled-opacity: 0.3
+        focused-color: $light-color-states-focused-color,
+        selected-color: $light-color-states-focused-color,
+        pressed-shadow: $light-color-states-pressed-shadow,
+        disabled-opacity: $light-color-states-disabled-opacity
+    );
+
+    $foreground: (
+        text:                       $light-color-foreground-text,
+        text-less-contrast:         $light-color-foreground-text-less-contrast,
+        text-disabled:              $light-color-foreground-text_disabled,
+        divider:                    $light-color-foreground-divider,
+        border:                     $light-color-foreground-border,
+        icon:                       $light-color-foreground-icon,
+    );
+
+    $background: (
+        background:                 $light-color-background-background,
+        background-popup:           $light-color-background-background-popup,
+        background-popup-footer:    $light-color-background-background_popup-footer,
+        background-disabled:        $light-color-background-background-disabled,
+        overlay-hovered:            $light-color-background-overlay-hovered,
+        overlay-active:             $light-color-background-overlay-active,
+        overlay-disabled:           $light-color-background-overlay-disabled
     );
 
     $theme: (
@@ -55,8 +74,8 @@
         second: $second,
         error: $error,
 
-        foreground: $mc-light-theme-foreground,
-        background: $mc-light-theme-background,
+        foreground: $foreground,
+        background: $background,
 
         warning: $warning,
         success: $success,
@@ -70,10 +89,29 @@
 
 @function mc-dark-theme($primary, $second, $error, $info, $success, $warning) {
     $states: (
-        focused-color: mc-color($primary),
-        selected-color: mc-color($primary, 700),
-        pressed-shadow: inset 1px 2px 2px 0 rgba(black, 0.2),
-        disabled-opacity: 0.3
+        focused-color: $dark-color-states-focused-color,
+        selected-color: $dark-color-states-focused-color,
+        pressed-shadow: $dark-color-states-pressed-shadow,
+        disabled-opacity: $dark-color-states-disabled-opacity
+    );
+
+    $background: (
+        background:                 $dark-color-background-background,
+        background-popup:           $dark-color-background-background-popup,
+        background-popup-footer:    $dark-color-background-background_popup-footer,
+        background-disabled:        $dark-color-background-background-disabled,
+        overlay-hovered:            $dark-color-background-overlay-hovered,
+        overlay-active:             $dark-color-background-overlay-active,
+        overlay-disabled:           $dark-color-background-overlay-disabled
+    );
+
+    $foreground: (
+        text:                       $dark-color-foreground-text,
+        text-less-contrast:         $dark-color-foreground-text-less-contrast,
+        text-disabled:              $dark-color-foreground-text_disabled,
+        divider:                    $dark-color-foreground-divider,
+        border:                     $dark-color-foreground-border,
+        icon:                       $dark-color-foreground-icon,
     );
 
     $theme: (
@@ -83,8 +121,8 @@
         second: $second,
         error: $error,
 
-        foreground: $mc-dark-theme-foreground,
-        background: $mc-dark-theme-background,
+        foreground: $foreground,
+        background: $background,
 
         warning: $warning,
         success: $success,
